# altmetric-news-quality

./: .gitignore  LICENSE  README.md  news_sources.ipynb  pyproject.toml  requirements.txt
data/: news_sources.csv  sample_2021-02-22.csv
data/input/: rss_feeds.csv  twitter_feeds.csv
data/processed/: articles.csv  filtered_articles.csv
data/raw/: cleaned_rss.csv  cleaned_tweets.csv
data/raw/rss/: log.csv  medpage.jsonl  newsmed.jsonl  nyt.jsonl  summary.csv  wired.jsonl
data/raw/twitter/: ifls_2021-03-01_2021-05-02.csv  popsci_2021-03-01_2021-05-02.csv
data/samples/: all_venues_2021-06-23.csv  all_venues_sample_05052021.csv  sample_2021-02-24.csv  sample_2021-03-19.csv  tweet_sample_30042021.csv
notebooks/: 0_initial_exploration.ipynb  1_download_twitter_feeds.ipynb  2_process_channels.ipynb  3_scrape_articles.ipynb  4_postprocessing.ipynb  5_pull_samples.ipynb  compare_rss_feeds.ipynb  download_rss_feeds.ipynb  download_twitter_feeds.ipynb  explore_news_sources.ipynb  news_sources.ipynb  playground_samples.ipynb  process_rss_feeds.ipynb  rss_feeds.ipynb
scripts/: collect_feeds_and_sync.py  create_rss_sample.py  create_sample.py  merge_and_normalize.py  run_collection.sh
