[tool.poetry]
name = "altmetric-news-quality"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.10"
pandas = "~1.2"
newspaper3k = "^0.2.8"
feedparser = "^6.0.2"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
black = "^20.8b1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
