[tool.poetry]
name = "altmetric-news-quality"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.2"
pandas = "^1.2.2"
newspaper3k = "^0.2.8"
feedparser = "^6.0.2"
twint = "^2.1.20"
matplotlib = "^3.4.1"
seaborn = "^0.11.1"
nest-asyncio = "^1.5.1"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.5"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.0"
black = "^20.8b1"
flake8 = "^3.8.4"
ipywidgets = "^7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
